fix(password): corrige alignement case a cocher afficher

--- a/src/component/password/style/_legacy.scss
+++ b/src/component/password/style/_legacy.scss
@@ -11,10 +11,6 @@
     &__checkbox {
       @include absolute(0, 0);
       @include margin(0);
-
-      input[type="checkbox"] {
-        top: spacing.space(-2v);
-      }
     }
   }
 }
